--- a/Landing.css
+++ b/Landing.css
@@ -198,11 +198,12 @@
 	filter: drop-shadow(3px 3px 6px rgba(0, 0, 0, 0.161));
 	overflow: visible;
 	position: absolute;
-	width: 211px;
-	height: 101px;
+	width: 200px;
+	height: 85px;
 	left: 0px;
 	top: 0px;
-	transform: matrix(1,0,0,1,0,0);
+	transform: translateY(12px);
+
 }
 #Submit_ {
 	position: absolute;
@@ -217,6 +218,7 @@
 	font-weight: normal;
 	font-size: 36px;
 	color: rgba(112,112,112,1);
+	transform: translateY(12px);
 }
 #__213 {
 	position: absolute;
@@ -424,8 +426,8 @@
 	filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.161));
 	overflow: visible;
 	position: absolute;
-	width: 198px;
-	height: 198px;
+	width: 180px;
+	height: 180px;
 	left: 0px;
 	top: 0px;
 	transform: matrix(1,0,0,1,0,0);
