--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
 	--web-scale-to-fit: true;
 	--web-scale-to-fit-type: width;
 	--web-scale-on-resize: true;
+	--web-center-horizontally: true;
 	--web-enable-deep-linking: true;
 }
 :root {
@@ -18,16 +19,19 @@
 }
 #Landing {
 	position: absolute;
+	transform: translateX(-50%);
+	left: 50%;
 	width: 1280px;
 	height: 2605px;
-	background-color: rgba(219,241,255,1);
 	overflow: hidden;
 	--web-view-name: Landing;
 	--web-view-id: Landing;
 	--web-scale-to-fit: true;
 	--web-scale-to-fit-type: width;
 	--web-scale-on-resize: true;
+	--web-center-horizontally: true;
 	--web-enable-deep-linking: true;
+	background-color: rgba(219,241,255,1);
 }
 @keyframes fadein {
 
@@ -55,9 +59,7 @@
 	width: 335px;
 	white-space: nowrap;
 	text-align: center;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 40px;
 	color: rgba(112,112,112,1);
 }
@@ -69,9 +71,7 @@
 	width: 1067px;
 	height: 44px;
 	text-align: center;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 20px;
 	color: rgba(112,112,112,1);
 }
@@ -83,9 +83,7 @@
 	width: 1067px;
 	height: 24px;
 	text-align: center;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 20px;
 	color: rgba(112,112,112,1);
 }
@@ -135,22 +133,25 @@
 }
 #submit_button {
 	position: absolute;
-	width: 173px;
-	height: 61px;
-	left: 863.5px;
-	top: 219px;
+	width: 200px;
+	height: 60px;
+	left: 900px;
+	top: 220px;
 	overflow: visible;
 }
-.___1012 {
+
+#submit_button #button-text {
+	line-height: 60px;
+}
+
+.submit_button {
 	filter: drop-shadow(3px 3px 6px rgba(0, 0, 0, 0.161));
 	overflow: visible;
 	position: absolute;
-	width: 191px;
-	height: 79px;
-	left: 0px;
-	top: 0px;
-	transform: matrix(1,0,0,1,0,0);
+	width: 200px;
+	height: 60px;
 }
+
 #Submit_ {
 	position: absolute;
 	left: 24.21px;
@@ -159,9 +160,7 @@
 	width: 125px;
 	height: 31px;
 	text-align: center;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 30px;
 	color: rgba(112,112,112,1);
 }
@@ -173,9 +172,7 @@
 	width: 629px;
 	white-space: nowrap;
 	text-align: center;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 60px;
 	color: rgba(112,112,112,1);
 }
@@ -187,9 +184,7 @@
 	width: 367px;
 	height: 44px;
 	text-align: center;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 33px;
 	color: rgba(112,112,112,1);
 }
@@ -198,10 +193,9 @@
 	overflow: visible;
 	position: absolute;
 	width: 618px;
-	height: 78px;
-	left: 243.5px;
+	height: 80px;
+	left: 170px;
 	top: 220px;
-	transform: matrix(1,0,0,1,0,0);
 }
 #chat_button {
 	position: absolute;
@@ -219,12 +213,12 @@
 	top: 0px;
 	overflow: visible;
 }
-.___70 {
+.chat_button {
 	filter: drop-shadow(3px 3px 6px rgba(0, 0, 0, 0.2));
 	position: absolute;
 	overflow: visible;
 	width: 458px;
-	height: 102px;
+	height: 80px;
 	left: 0px;
 	top: 0px;
 }
@@ -236,9 +230,7 @@
 	width: 361px;
 	height: 60px;
 	text-align: center;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 30px;
 	color: rgba(112,112,112,1);
 }
@@ -250,9 +242,7 @@
 	width: 367px;
 	height: 44px;
 	text-align: center;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 33px;
 	color: rgba(112,112,112,1);
 }
@@ -308,16 +298,14 @@
 	width: 432px;
 	white-space: nowrap;
 	text-align: left;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 60px;
 	color: rgba(112,112,112,1);
 }
 #self {
 	position: absolute;
 	width: 384px;
-	height: 99px;
+	height: 100px;
 	left: 45px;
 	top: 218px;
 	overflow: visible;
@@ -335,24 +323,11 @@
 	--web-action-target: What_Can_I_do.html;
 	cursor: pointer;
 }
-#Take_Care_of_Yourself {
-	position: absolute;
-	left: 56.5px;
-	top: 31.292px;
-	overflow: visible;
-	width: 273px;
-	white-space: nowrap;
-	text-align: left;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 27px;
-	color: rgba(112,112,112,1);
-}
+
 #others {
 	position: absolute;
 	width: 384px;
-	height: 99px;
+	height: 100px;
 	left: 448px;
 	top: 218px;
 	overflow: visible;
@@ -370,24 +345,11 @@
 	--web-action-target: What_Can_I_do.html;
 	cursor: pointer;
 }
-#Take_Care_of_Others {
-	position: absolute;
-	left: 47.5px;
-	top: 27.568px;
-	overflow: visible;
-	width: 291px;
-	white-space: nowrap;
-	text-align: left;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 31px;
-	color: rgba(112,112,112,1);
-}
+
 #world {
 	position: absolute;
 	width: 384px;
-	height: 99px;
+	height: 100px;
 	left: 851px;
 	top: 218px;
 	overflow: visible;
@@ -405,20 +367,7 @@
 	--web-action-target: What_Can_I_do.html;
 	cursor: pointer;
 }
-#Stay_Curious_and_Informed {
-	position: absolute;
-	left: 34.5px;
-	top: 33.846px;
-	overflow: visible;
-	width: 317px;
-	white-space: nowrap;
-	text-align: left;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 26px;
-	color: rgba(112,112,112,1);
-}
+
 #others_graphic {
 	position: absolute;
 	width: 102px;
@@ -487,25 +436,24 @@
 	top: 329.98px;
 	transform: matrix(1,0,0,1,0,0);
 }
-#CovidCheatSheet {
+#title {
 	position: absolute;
 	left: 278.5px;
 	top: 160.98px;
-	overflow: hidden;
+	overflow: visible;
 	width: 804px;
 	height: 89px;
 	text-align: center;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 80px;
 	color: rgba(112,112,112,1);
 }
+
 #ask_expert_button {
 	position: absolute;
-	width: 260px;
+	width: 300px;
 	height: 80px;
-	left: 960px;
+	left: 940px;
 	top: 441.98px;
 	overflow: visible;
 }
@@ -514,7 +462,6 @@
 	position: absolute;
 	overflow: visible;
 	width: 278px;
-	height: 98px;
 	left: 0px;
 	top: 0px;
 }
@@ -526,17 +473,15 @@
 	width: 180px;
 	white-space: nowrap;
 	text-align: left;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 25px;
 	color: rgba(112,112,112,1);
 }
 #what_can_i_do_button {
 	position: absolute;
-	width: 260px;
+	width: 300px;
 	height: 80px;
-	left: 550px;
+	left: 530px;
 	top: 441.98px;
 	overflow: visible;
 }
@@ -545,29 +490,28 @@
 	position: absolute;
 	overflow: visible;
 	width: 278px;
-	height: 98px;
 	left: 0px;
 	top: 0px;
 }
-#Ask_An_Expert_ {
+#button-text {
 	position: absolute;
-	left: 43px;
-	top: 26px;
+ 	line-height: 80px;
+ 	vertical-align: middle;
 	overflow: visible;
-	width: 175px;
-	white-space: nowrap;
-	text-align: left;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 25px;
+	width: 100%;
+	text-align: center;
 	color: rgba(112,112,112,1);
 }
+
+#self #button-text, #others #button-text, #world #button-text {
+	line-height: 100px;
+}
+
 #what_is_happening_button {
 	position: absolute;
-	width: 260px;
-	height: 109.644px;
-	left: 160px;
+	width: 300px;
+	height: 80px;
+	left: 140px;
 	top: 441.98px;
 	overflow: visible;
 }
@@ -576,24 +520,10 @@
 	position: absolute;
 	overflow: visible;
 	width: 278px;
-	height: 98px;
 	left: 0px;
 	top: 0px;
 }
-#What_is_Happening_ {
-	position: absolute;
-	left: 20px;
-	top: 9.701px;
-	overflow: visible;
-	width: 226px;
-	height: 99.943px;
-	text-align: center;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 25px;
-	color: rgba(112,112,112,1);
-}
+
 #menu_button {
 	position: absolute;
 	width: 80px;
@@ -651,9 +581,7 @@
 	width: 401px;
 	height: 40px;
 	text-align: left;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 25px;
 	color: rgba(112,112,112,1);
 }
@@ -694,16 +622,10 @@
 }
 #What_Is_Happening_ {
 	position: absolute;
-	left: 364.5px;
-	top: 168.986px;
+	top: 140px;
 	overflow: visible;
-	width: 552px;
-	white-space: nowrap;
-	text-align: left;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 60px;
+	width: 100%;
+	text-align: center;
 	color: rgba(112,112,112,1);
 }
 #economy {
@@ -1279,9 +1201,7 @@
 	width: 201px;
 	height: 60px;
 	text-align: center;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 25px;
 	color: rgba(112,112,112,1);
 }
@@ -1293,9 +1213,7 @@
 	width: 201px;
 	height: 60px;
 	text-align: center;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 25px;
 	color: rgba(112,112,112,1);
 }
@@ -1307,9 +1225,7 @@
 	width: 201px;
 	height: 60px;
 	text-align: center;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 25px;
 	color: rgba(112,112,112,1);
 }
@@ -1321,9 +1237,7 @@
 	width: 201px;
 	height: 60px;
 	text-align: center;
-	font-family: AppleGothic;
-	font-style: normal;
-	font-weight: normal;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 25px;
 	color: rgba(112,112,112,1);
 }
