--- a/What_is_happening.css
+++ b/What_is_happening.css
@@ -2979,7 +2979,7 @@
 	top: 0px;
 	overflow: visible;
 }
-#___2_ma {
+#map {
 	filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.2));
 	position: absolute;
 	width: 1152px;
