--- a/global.css
+++ b/global.css
@@ -29,7 +29,12 @@ h1, h2, h3, h4, h5, p, span {
 	font-family: 'Montserrat', sans-serif;
 	color: rgba(112,112,112,1);
 	font-weight: 300;
+	text-align: center;
 
+}
+
+a {
+  text-decoration: none;
 }
 
 h1 {
